tests/spec/emit/snapshots/complex_addition.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> complex128 {
    3 + 4i
  }
---
package main

func test() complex128 {
	return 3 + 4i
}
