tests/spec/emit/snapshots/complex_param_pattern_no_name_collision.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn f(arg_1: int, (x, y): (int, int)) -> int { arg_1 + x + y }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func f(arg_1 int, arg lisette.Tuple2[int, int]) int {
	x := arg.First
	y := arg.Second
	return arg_1 + x + y
}
