tests/spec/emit/snapshots/complex_pattern_temp_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let (a, (b, c)) = (1, (2, 3));
    let tmp_1 = 7;
    let _ = a;
    let _ = b;
    let _ = c;
    let _ = tmp_1;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	tmp := lisette.MakeTuple2[int, lisette.Tuple2[int, int]](1, lisette.MakeTuple2[int, int](2, 3))
	c := tmp.Second.Second
	_ = c
}
