tests/spec/emit/snapshots/complex_subtraction.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> complex128 {
    10 - 2i
  }
---
package main

func test() complex128 {
	return 10 - 2i
}
