tests/spec/emit/snapshots/compound_assignment_runs_an_effectful_index_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut counter = 0
    let next = || { counter += 1; counter - 1 }
    let mut values = [0, 0, 0]
    values[next()] += next() * 10
    let _ = values
  }
---
package main

func main() {
	counter := 0
	next := func() int {
		counter++
		return counter - 1
	}
	values := []int{0, 0, 0}
	idx := next()
	left := values[idx]
	values[idx] = left + next()*10
	_ = values
}
