tests/spec/emit/snapshots/compound_binary_rhs_keeps_grouping_when_left_pinned.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn run() -> int {
    let mut x = 2
    let mut y = 3
    let bump = || -> int { y = 10; 4 }
    x *= y + bump()
    x
  }
---
package main

func run() int {
	x := 2
	y := 3
	bump := func() int {
		y = 10
		return 4
	}
	left_1 := x
	left := y
	x = left_1 * (left + bump())
	return x
}
