tests/spec/emit/snapshots/compound_deref_assignment_target_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct H { ptr: mut Ref<int> }
  
  impl H {
    fn repoint(self: mut Ref<H>, q: mut Ref<int>) -> int {
      self.ptr = q
      9
    }
  }
  
  fn main() {
    let mut a = 1
    let mut b = 2
    let mut h = H { ptr: &a }
    h.ptr.* += h.repoint(&b)
    let _ = a
    let _ = b
  }
---
package main

type H struct {
	ptr *int
}

func (h *H) repoint(q *int) int {
	h.ptr = q
	return 9
}

func main() {
	a := 1
	b := 2
	h := H{ptr: &a}
	ref := h.ptr
	left := *ref
	*ref = left + h.repoint(&b)
	_ = a
	_ = b
}
