tests/spec/emit/snapshots/compound_identifier_target_reads_before_call_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn run() -> int {
    let mut x = 1
    let bump = || -> int { x = 100; 5 }
    x += bump()
    x
  }
---
package main

func run() int {
	x := 1
	bump := func() int {
		x = 100
		return 5
	}
	left := x
	x = left + bump()
	return x
}
